--- a/01basic/index02.html
+++ b/01basic/index02.html
@@ -22,6 +22,23 @@
         console.log(10 + 3.14); //13.14
         console.log(20 + '20'); //2020
         console.log(10 + undefined); //NaN - 잘못된 연산
+
+        //데이터타입 - number, str, boolean, undefined, null
+        var bool = true;
+        console.log(bool);
+
+        var und; //초기값을 지정하지 않으면 undefined
+        console.log(und);
+
+        //초기값을 지정했는데 값이 존재하지 않으면 null
+        var tag = document.getElementById("a");
+        
+        console.log(typeof num1);
+        console.log(typeof num3);
+        console.log(typeof bool);
+        console.log(typeof und);
+        console.log(typeof tag); //obj
+
     </script>
 </body>
 </html>
