--- a/03node_select/quiz02.html
+++ b/03node_select/quiz02.html
@@ -13,19 +13,18 @@
 
     <h2 class="h2">단어를 선택하세요</h2>
     <select id="sel">
-        <option id="1" class="option" value="선택">선택</option>
-        <option id="2" class="option" value="영어">hello</option>
-        <option id="3" class="option" value="한국어">안녕하세요</option>
-        <option id="4" class="option" value="중국어">你好</option>
+        <option value="선택">선택</option>
+        <option value="영어">hello</option>
+        <option value="한국어">안녕하세요</option>
+        <option value="중국어">你好</option>
     </select>
 
     <script>
         var h2 = document.querySelector(".h2");
         var sel = document.getElementById("sel");
-        console.log(sel[0].id);
-        sel.onchange = function f() {
+        sel.onchange = function() {
             if(sel.value == "선택") {
-                h2.innerHTML = this.value;
+                h2.innerHTML = "단어를 선택하세요";
             } else if(sel.value == "영어") {
                 h2.innerHTML = this.value;
             } else if(sel.value == "한국어") {
