--- a/05event객체/quiz03(토글탭).html
+++ b/05event객체/quiz03(토글탭).html
@@ -16,7 +16,24 @@
         }
 
         .toggle-menu {display: none;}
-        .active { display: block; }
+        .active {
+            display: block;
+            background-color: aquamarine;
+            animation: fadeIn 0.5s ease-in-out;
+        }
+        
+        /* 애니메이션 */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                background-color: powderblue;
+                margin-left: -100px;
+            } to {
+                opacity: 1;
+                background-color: aquamarine;
+                margin-left: 0;
+            }
+        }
     </style>
 </head>
 <body>
