23-01-09 21:35 퍼즐작업중

--- a/09AJAX/index05(카카오로그인).html
+++ b/09AJAX/index05(카카오로그인).html
@@ -17,17 +17,103 @@
     </a>
 
     <script>
-        //1. 카카오 SDK 초기화 ('js 키')
+        //1. 카카오 SDK초기화
         Kakao.init('2421060e0f1137b3c5f6864552a4ba77');
-        Kakao.isInitialized();
+        //초기화 여부 판단
+        console.log(Kakao.isInitialized());//true
 
-        //2. 
         function loginWithKakao() {
             Kakao.Auth.authorize({
-                redirectUri: 'http://127.0.0.1:5500/09AJAX/index05(카카오로그인).html'
+                redirectUri: 'http://127.0.0.1:5500/09AJAX/index05(카카오로그인).html',
             });
         }
 
+        //3. 인가코드 받아오기
+        // URLSearchParams
+        var URLSearch = new URLSearchParams(location.search);
+        // console.log(URLSearch.get("code"));
+        if (URLSearch.get("code") != null) {
+            ajax();
+        }
+
+        //4. 토큰발급요청 (POST방식, 폼형식)
+        function ajax() {
+
+            // //JSON형식의 POST요청
+            // var data = {
+            //     grant_type : "authorization_code",
+            //     client_id : "93f108c1209cb46cce090b5e2a2a419b",
+            //     redirect_uri : "http://127.0.0.1:5501/09.Ajax/index05.html",
+            //     code : URLSearch.get("code")
+            // }
+
+            // //null값이 아니면 토큰을 발급하게 해주는 함수작성
+            // fetch("https://kauth.kakao.com/oauth/token", {
+            //     method : 'POST',
+            //     headers : {
+            //         'Content-Type': 'application/json'
+            //     },
+            //     body : JSON.stringify(data)
+            // })
+            // .then(function(res){
+            //     console.log(res);
+            // })
+
+            //FORM형식의 POST요청
+            //FORM데이터 객체이용 or 문자열
+            //쿼리스트링 형식으로 보내기
+            var url = "http://127.0.0.1:5500/09AJAX/index05(카카오로그인).html";
+            var data = "grant_type=authorization_code" +
+                "&client_id=cf940e8fefb081c994e438d4c6cd9e1f" +
+                "&redirect_uri=" + url +
+                "&code=" + URLSearch.get("code");
+
+            fetch("https://kauth.kakao.com/oauth/token", {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded;charset=utf-8'
+                },
+                body: data
+            })
+                .then(function (res) {
+                    return res.json();
+                })
+                .then(function (data) {
+                    console.log(data);
+                    //SessionStorage 나  cookie
+                    sessionStorage.setItem("access_token", data.access_token);
+                    //카카오 API함수
+                    Kakao.Auth.setAccessToken(data.access_token);
+
+                    //토큰을 발급받고 사용자정보 받아오기 호출
+                    requestUserInfo();
+                })
+
+        }
+
+        //5. 사용자정보 받아오기
+        function requestUserInfo() {
+            //카카오API내장함수 호출
+            Kakao.API.request({
+                url: '/v2/user/me',
+                })
+                .then(function (response) {
+                    console.log(response);
+                    console.log(response.kakao_account.email);
+                    console.log(response.kakao_account.profile.nickname);
+                    console.log(response.kakao_account.profile.profile_image_url);
+
+                    //이 정보를 가지고 내 데이터베이스에서 조회, 로그인하는 작업
+                    //처리 페이지
+                    sessionStorage.setItem("info", JSON.stringify({id: response.kakao_account.email,
+                                                                   nick: response.kakao_account.profile.nickname}));
+                    location.href = "index06.html";
+
+                })
+                .catch(function (error) {
+                    console.log(error);
+                });
+        }
     </script>
 </body>
 
